# roar

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  genindex.html  home.html  index.html  libraries.html  objects.inv  package.json  search.html  searchindex.js  servethis.py  vcpkg.json
.github/workflows/: build_and_test.yml  deploy_docs.yml
_sources/: home.md.txt  index.md.txt
_sources/http/: basic_setup.md.txt  curl.md.txt  server.md.txt
_sources/websocket/: client.md.txt  server.md.txt
_static/js/: custom.js
cmake/: brew.cmake  curl.cmake  example_target.cmake  fmt.cmake  gtest.cmake  nlohmann_json.cmake  options.cmake  sanitizers.cmake  test_target.cmake  warnings.cmake  xhawk18_promise.cmake
cmake/dependencies/: boost.cmake  cryptopp.cmake  gtest.cmake  nlohmann_json.cmake  ssl.cmake  xhawk18_promise.cmake
docs/: genindex.html
docs/doctrees/: environment.pickle  index.doctree
docs/doxygen/: README_8md.html  annotated.html  base64_8cpp.html  base64_8cpp__incl.md5  base64_8hpp.html  base64_8hpp__dep__incl.md5  base64_8hpp__incl.md5  base64_8hpp_source.html  classRequestListener.html  classRequestListener__coll__graph.map  classRequestListener__coll__graph.md5  classRoar_1_1Curl_1_1CurlError-members.html  classRoar_1_1Curl_1_1CurlError.html  classRoar_1_1Curl_1_1CurlError__coll__graph.map  classRoar_1_1Curl_1_1CurlError__coll__graph.md5  classRoar_1_1Curl_1_1FileSource.html  classRoar_1_1Curl_1_1FileSource__coll__graph.map  classRoar_1_1Curl_1_1GlobalCurlContext-members.html  classRoar_1_1Curl_1_1GlobalCurlContext.html  classRoar_1_1Curl_1_1Instance.html  classRoar_1_1Curl_1_1Request.html  classRoar_1_1Curl_1_1Request__coll__graph.map  classRoar_1_1Curl_1_1Request__coll__graph.md5  classRoar_1_1Curl_1_1Response-members.html  classRoar_1_1Curl_1_1Response.html  classRoar_1_1Curl_1_1Sink-members.html  classRoar_1_1Curl_1_1Sink.html  classRoar_1_1Curl_1_1Sink__coll__graph.md5  classRoar_1_1Curl_1_1Source.html  classRoar_1_1Curl_1_1Source__coll__graph.map  classRoar_1_1Curl_1_1Source__coll__graph.md5  classRoar_1_1Curl_1_1StringSource-members.html  classRoar_1_1Curl_1_1StringSource.html  classRoar_1_1Curl_1_1StringSource__coll__graph.map  classRoar_1_1Detail_1_1FixedString.html  classRoar_1_1Detail_1_1FixedString__coll__graph.md5  classRoar_1_1Factory.html  classRoar_1_1Factory__coll__graph.md5  classRoar_1_1Request.html  classRoar_1_1Request__coll__graph.map  (+305 more)
docs/http/: curl.html  server.html
docs_source/: CMakeLists.txt  doxyfile  nodemon.json  package-lock.json  package.json  requirements.txt
docs_source/doxygen/: index.md
docs_source/scripts/: build.js  clean.js  constants.js  postprocess.py  serve.js
docs_source/sphinx/: conf.py  home.md  index.md  libraries.md
docs_source/sphinx/_static/js/: custom.js
docs_source/sphinx/_templates/: layout.html
docs_source/sphinx/http/: curl.md  server.md
docs_source/sphinx/websocket/: client.md  server.md
doctrees/: environment.pickle  home.doctree  index.doctree  libraries.doctree
doctrees/http/: basic_setup.doctree  curl.doctree  server.doctree
doctrees/websocket/: client.doctree  server.doctree
doxygen/: 100__continue_2main_8cpp.html  100__continue_2main_8cpp__incl.map  100__continue_2main_8cpp__incl.md5  README_8md.html  annotated.html  authorization_8cpp.html  authorization_8cpp__incl.map  authorization_8cpp__incl.md5  authorization_8hpp.html  authorization_8hpp__dep__incl.map  authorization_8hpp__dep__incl.md5  authorization_8hpp__incl.map  authorization_8hpp__incl.md5  authorization_8hpp_source.html  base64_8cpp.html  base64_8cpp__incl.map  base64_8cpp__incl.md5  base64_8hpp.html  base64_8hpp__dep__incl.map  base64_8hpp__dep__incl.md5  base64_8hpp__incl.map  base64_8hpp__incl.md5  base64_8hpp_source.html  basic__auth_8cpp.html  basic__auth_8cpp__incl.map  basic__auth_8cpp__incl.md5  basic__auth_8hpp.html  basic__auth_8hpp__dep__incl.map  basic__auth_8hpp__dep__incl.md5  basic__auth_8hpp__incl.map  basic__auth_8hpp__incl.md5  basic__auth_8hpp_source.html  basic__setup_8md.html  bytes__to__human__readable_8hpp.html  bytes__to__human__readable_8hpp__dep__incl.map  bytes__to__human__readable_8hpp__dep__incl.md5  bytes__to__human__readable_8hpp__incl.map  bytes__to__human__readable_8hpp__incl.md5  bytes__to__human__readable_8hpp_source.html  classBase.html  (+1514 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+108 more)
examples/: CMakeLists.txt
http/: basic_setup.html  curl.html  server.html
scripts/: build.sh  build_docs.sh  copy_compile_commands.js  publish_docs.sh  runexe.sh  rungdb.sh
src/roar/: CMakeLists.txt  client.cpp  mime_type.cpp  request.cpp  request_listener.cpp  server.cpp
src/roar/authorization/: authorization.cpp  basic_auth.cpp  digest_auth.cpp
src/roar/curl/: global_curl_context.cpp  request.cpp  response.cpp
src/roar/curl/sources/: file_source.cpp  string_source.cpp
src/roar/detail/filesystem/: jail.cpp  special_paths.cpp
src/roar/filesystem/: jail.cpp  special_paths.cpp
src/roar/mechanics/: cookie.cpp  ranges.cpp
src/roar/routing/: request_listener.cpp  route.cpp  router.cpp
src/roar/session/: factory.cpp  session.cpp
src/roar/ssl/: make_ssl_context.cpp
src/roar/url/: encode.cpp  ipv4.cpp  ipv6.cpp  url.cpp
src/roar/utility/: base64.cpp  date.cpp  sha.cpp  shutdown_barrier.cpp  url.cpp
src/roar/websocket/: client.cpp  web_socket_session.cpp  websocket_base.cpp  websocket_client.cpp  websocket_session.cpp
test/: CMakeLists.txt  test_cors.hpp  test_http_server.hpp  test_reading.hpp  test_secure_async_client.hpp  test_serve.hpp  test_unsecure_async_client.hpp  test_url.hpp  test_web_socket.hpp  tests.cpp
test/curl/: test_request.hpp
test/resources/: keys.hpp
test/util/: common_listeners.hpp  common_server_setup.hpp  executeable_path.hpp  temporary_directory.hpp  test_sources.hpp
websocket/: client.html  server.html
(+155 files in other folders)
